# ML_Kit

./: .gitignore  LICENSE  README.md  pyproject.toml
custom_models/: plugin.py
custom_models/sklearn_like/: plugin.py
examples/data/: predict_example.csv  train_example.csv
models/: ridge.joblib
src/ml_diagnostics_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/mldk/: __init__.py  cli.py  evaluate.py  io.py  modeling.py  predict.py  train.py  utils.py
tests/: test_io.py  test_train_predict_smoke.py
