[project]
name = "ml-diagnostics-kit"
version = "0.1.0"
description = "Minimal ML diagnostics CLI"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "ML Kit" }]
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "joblib",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
